--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,5 @@
    "name": "PWA Citia",
    "short_name": "PWA C",
    "start_url": "./index.html",
-   "display": "standalone"
+   "display": "fullscreen"
 }
